# ds-event-stream-py-sdk

./: 404.html  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  PyPI.md  README.md  VERSION.txt  index.html  main.py  mkdocs.yml  pyproject.toml
.config/: pytest.ini  ruff.toml
.github/workflows/: deploy-docs.yml  deploy-pypi.yml  release.yaml  simple-pypi-deploy.yml
api/: index.html
docs/: README.md  api.md  license.md  mkdocs.yml  testing.md  usage.md
docs/source/: conf.py  index.rst
dseventstream/kafka/: kafka_service.py
dseventstream/models/: event.py
examples/: 01_event.py  02_consumer.py  03_producer.py
license/: index.html
schemas/: event.json  system-topics.json
scripts/: create-release-tag.sh
search/: search_index.json
src/ds_event_stream_py_sdk/: __init__.py  errors.py
src/ds_event_stream_py_sdk/consumer/: __init__.py  base.py
src/ds_event_stream_py_sdk/models/: __init__.py  v1.py
src/ds_event_stream_py_sdk/producer/: __init__.py  base.py
testing/: index.html
tests/: __init__.py  test_errors.py  test_kafka_consumer.py  test_kafka_mock.py  test_kafka_producer.py  test_version.py
tests/consumer/: __init__.py  test_base.py
tests/models/: __init__.py  test_v1.py
tests/producer/: __init__.py  test_base.py
usage/: index.html
