[project]
name = "ds-event-stream-python-sdk"
version = "0.1.0"
description = "Python SDK for Kafka event streaming (Grasp Labs)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.25.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
